fix glitch in the z-index by bringing the stats-container to front

--- a/style.css
+++ b/style.css
@@ -63,6 +63,8 @@ body {
 
     max-width: 820px;
     margin: 0 auto;
+
+    z-index: 1;
 }
 
 .stats-up-container-row {
